fix flicker issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -594,6 +594,10 @@ video {
   height: 300px;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -665,6 +669,16 @@ video {
 .bg-pink-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 72 153 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-tr {
@@ -747,6 +761,14 @@ video {
 
 .leading-none {
   line-height: 1;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-\[100px\] {
+  line-height: 100px;
 }
 
 .text-cyan-400 {
